# english_to_hausa_backend

./: .env.example  .gitignore  API_DOCS.md  Dockerfile  README.md  backend-pipeline (1).md  main.py  pyproject.toml  route.py
api/: deps.py
api/endpoints/: translate.py  tts.py  video_to_audio.py
crud/: job.py
migrations/: env.py
migrations/versions/: e1d8dbedd791_initial_migrations_create_jobs_table.py
models/: config.py  database.py  job.py
schema/: api_schemas.py  job_schemas.py
services/: __init__.py  audio_extractor.py  downloader.py  file_manager.py  gtts_tts.py  model_loader.py  transcriber.py  translator.py  tts_generator.py
