[project]
name = "english-to-hausa"
version = "0.1.0"
description = "FastAPI English to Hausa translation and synthesis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.9",
    "yt-dlp>=2024.3.10",
    "httpx>=0.27.0",
    "alembic>=1.18.4",
    "gtts>=2.5.4",
    "cloudinary>=1.44.2",
    "imageio-ffmpeg>=0.5.0",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "services*", "api*", "schema*", "crud*"]
namespaces = false

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.3.0",
]
